提交相关工具方法

--- a/src/main/resources/mongo.properties
+++ b/src/main/resources/mongo.properties
@@ -12,10 +12,10 @@
 #
 #-----------------------------------------------------------#
 #\u6570\u636E\u5E93\u8FDE\u63A5\u5730\u5740
-URI.DEFAULT = mongodb://demo:demo123456@127.0.0.1:27017/DEMO
-DB.DEFAULT = DEMO
+URI.LOCALHOST = mongodb://demo:demo123456@127.0.0.1:27017/demo
+DB.LOCALHOST = demo
 #\u9ED8\u8BA4\u4F7F\u7528\u7684\u6570\u636E\u5E93
-DEFAULT_DB_KEY = DEFAULT
+DEFAULT_DB_KEY = LOCALHOST
 
 
 
