--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,59 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>top.vchar.utils</groupId>
-    <artifactId>morphia-mongo-tool</artifactId>
-    <packaging>jar</packaging>
+    <groupId>top.vchar.db</groupId>
+    <artifactId>mongo-morphia-sdk</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>morphia-mongo-tool</name>
-    <description>A 'Morphia' repacking. Make 'Mongo' easier to operate</description>
+    <packaging>jar</packaging>
+    <description>morphia框架操作mongodb的相关方法二次封装开发</description>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.build.locales>zh_CN</project.build.locales>
+        <morphia.version>1.3.2</morphia.version>
+        <mongo.version>3.6.4</mongo.version>
+        <fastjson.version>1.2.47</fastjson.version>
+    </properties>
+
+    <dependencies>
+        <!--fastjson start-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
+        <!--fastjson end-->
+        <!--mongodb start-->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver</artifactId>
+            <version>${mongo.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>${mongo.version}</version>
+        </dependency>
+        <!--mongodb end-->
+        <!--morphia start-->
+        <dependency>
+            <groupId>org.mongodb.morphia</groupId>
+            <artifactId>morphia</artifactId>
+            <version>${morphia.version}</version>
+        </dependency>
+        <!--morphia end-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <build>
-        <finalName>morphia-mongo-tool</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -34,33 +79,5 @@
         </plugins>
     </build>
 
-    <properties>
-        <morphia.version>1.3.2</morphia.version>
-        <mongo.version>3.6.4</mongo.version>
-    </properties>
 
-    <dependencies>
-        <!--mongodb-->
-        <dependency>
-            <groupId>org.mongodb</groupId>
-            <artifactId>mongodb-driver</artifactId>
-            <version>${mongo.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mongodb</groupId>
-            <artifactId>mongo-java-driver</artifactId>
-            <version>${mongo.version}</version>
-        </dependency>
-        <!--morphia-->
-        <dependency>
-            <groupId>org.mongodb.morphia</groupId>
-            <artifactId>morphia</artifactId>
-            <version>${morphia.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>RELEASE</version>
-        </dependency>
-    </dependencies>
 </project>
